syntax = "proto3";

package auth;

option go_package = "/valid_access_token";

service ValidAccessTokenService {
  rpc ValidAccessToken (ValidRequest) returns (ValidResponse);
}

message ValidRequest {
    string accessToken = 1;
}

message ValidResponse {
    int32 code = 1;
    int32 id = 2;
    string role = 3;
}

//protoc --go_out=. --go-grpc_out=. valid_access_token.proto